# SimpleOnlineCompiler

./: .gitignore  CMakeLists.txt  Main  README.md  Todolist.md  main.cpp
Common/: log.hpp  mapTable.hpp  util.hpp
Service/: compile_run.hpp  compiler.hpp  runner.hpp
wwwroot/: index.html  styles.css  test.html
